--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,15 @@
 
 # BlueJ files
 *.ctxt
+.classpath
+.factorypath
+.project
+.settings/
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# Package Files
 *.jar
 *.war
 *.nar
@@ -22,3 +26,8 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Exclude directories
+bin/
+.settings/
+target/
